misc fsals: 32-bit fmt strings, gcc-6.1 possible uninit'd use
Fedora 25

-D_FILE_OFFSET_BITS=64 results in use of statvfs64, lseek64, stat64, ftruncate64,
openat64, pread64, and pwrite64 instead of the 32-bit analogs

fmt string changes are a no-op on 64-bit systems.

Change-Id: I65570b3a9a1ba4a3bcd1275232799564fdc66948
Signed-off-by: Kaleb S KEITHLEY <kkeithle@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -153,7 +153,7 @@ endif(FREEBSD)
 
 if (LINUX)
     set(PLATFORM "LINUX")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_LARGEFILE64_SOURCE")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64")
     set(OS_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include/os/linux")
     find_library(LIBDL dl)  # module loader
 endif(LINUX)
