--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -522,7 +522,11 @@ if(USE_FSAL_GLUSTER)
   IF(GLUSTER_PREFIX)
     set(ENV{PKG_CONFIG_PATH} "${PKG_CONFIG_PATH}:${GLUSTER_PREFIX}/lib/pkgconfig")
   ENDIF(GLUSTER_PREFIX)
-  pkg_check_modules(GFAPI glusterfs-api>=7.3.7)
+  if( "${GANESHA_MAJOR_VERSION}.${GANESHA_MINOR_VERSION}" VERSION_GREATER "2.3" )
+    pkg_check_modules(GFAPI glusterfs-api>=7.3.8)
+  else( "${GANESHA_MAJOR_VERSION}.${GANESHA_MINOR_VERSION}" VERSION_GREATER "2.3" )
+    pkg_check_modules(GFAPI glusterfs-api>=7.3.7)
+  endif( "${GANESHA_MAJOR_VERSION}.${GANESHA_MINOR_VERSION}" VERSION_GREATER "2.3" )
   if(NOT GFAPI_FOUND)
     if(STRICT_PACKAGE)
       message(FATAL_ERROR "STRICT PACKAGE: Cannot find GLUSTER GFAPI runtime. Disabling GLUSTER fsal build")
@@ -537,6 +541,13 @@ if(USE_FSAL_GLUSTER)
     # missing directory not provided by current version of GlusterFS
     include_directories(${GFAPI_PREFIX}/include)
     link_directories (${GFAPI_LIBRARY_DIRS})
+    pkg_check_modules(GLFS_H_LOOKUPAT_WITH_FOLLOW glusterfs-api>=7.3.7.4)
+    if(NOT GLFS_H_LOOKUPAT_WITH_FOLLOW_FOUND)
+      set(USE_GLUSTER_SYMLINK_MOUNT OFF)
+      message(WARNING "Disabling symlink mount for FSAL GLUSTER")
+    else(NOT GLFS_H_LOOKUPAT_WITH_FOLLOW_FOUND)
+      set(USE_GLUSTER_SYMLINK_MOUNT ON)
+    endif(NOT GLFS_H_LOOKUPAT_WITH_FOLLOW_FOUND)
   endif(NOT GFAPI_FOUND)
 
   if(USE_FSAL_GLUSTER)
@@ -558,13 +569,6 @@ if(USE_FSAL_GLUSTER)
 	message(STATUS "Could not find libacl, disabling GLUSTER fsal build")
     endif(HAVE_ACL_H)
   endif(USE_FSAL_GLUSTER)
-  pkg_check_modules(GLFS_H_LOOKUPAT_WITH_FOLLOW glusterfs-api>=7.3.7.4)
-  if(NOT GLFS_H_LOOKUPAT_WITH_FOLLOW_FOUND)
-	set(USE_GLUSTER_SYMLINK_MOUNT OFF)
-	message(WARNING "Disabling symlink mount for FSAL GLUSTER")
-  else()
-	set(USE_GLUSTER_SYMLINK_MOUNT ON)
-  endif(NOT GLFS_H_LOOKUPAT_WITH_FOLLOW_FOUND)
 endif(USE_FSAL_GLUSTER)
 
 if(USE_FSAL_CEPH)
