--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -329,19 +329,6 @@ IF(ENFORCE_GCC)
 ENDIF(ENFORCE_GCC)
 
 # Build source locations and parameters
-IF(USE_FSAL_CEPH)
-  IF(CEPH_PREFIX)
-    set(CEPH_PREFIX ${CEPH_PREFIX} CACHE PATH "Path to Ceph installation")
-    LIST(APPEND CMAKE_PREFIX_PATH "${CEPH_PREFIX}")
-    LIST(APPEND CMAKE_LIBRARY_PATH "${CEPH_PREFIX}/lib")
-    LIST(APPEND CMAKE_REQUIRED_INCLUDES "${CEPH_PREFIX}/include")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I${CEPH_PREFIX}/include")
-    link_directories("${CEPH_PREFIX}/lib")
-  ELSE()
-    set(CEPH_PREFIX "/usr" CACHE PATH "Path to Ceph installation")
-  ENDIF()
-ENDIF()
-
 IF(USE_FSAL_RGW)
   IF(RGW_PREFIX)
     set(RGW_PREFIX ${RGW_PREFIX} CACHE PATH "Path to RGW installation")
@@ -569,45 +556,15 @@ if(USE_FSAL_GLUSTER)
 endif(USE_FSAL_GLUSTER)
 
 if(USE_FSAL_CEPH)
-  find_library(CEPH_FS cephfs)
-  check_library_exists(
-    cephfs
-    ceph_ll_connectable_x
-    ${CEPH_PREFIX}
-    CEPH_FS
-    )
-  if(NOT CEPH_FS)
+  find_package(CephFS)
+  if(NOT CEPHFS_FOUND)
     if(STRICT_PACKAGE)
       message(FATAL_ERROR "STRICT_PACKAGE : Cannot find CEPH runtime.  Disabling CEPH fsal build")
     else(STRICT_PACKAGE)
       message(WARNING "Cannot find CEPH runtime.  Disabling CEPH fsal build")
       set(USE_FSAL_CEPH OFF)
     endif(STRICT_PACKAGE)
-  endif(NOT CEPH_FS)
-  check_library_exists(
-    cephfs
-    ceph_ll_mknod
-    ${CEPH_PREFIX}
-    CEPH_FS_MKNOD
-    )
-  if(NOT CEPH_FS_MKNOD)
-      message(WARNING "Cannot find ceph_ll_mknod.  Disabling CEPH fsal mknod method")
-      set(USE_FSAL_CEPH_MKNOD OFF)
-  else(CEPH_FS_MKNOD)
-      set(USE_FSAL_CEPH_MKNOD ON)
-  endif(NOT CEPH_FS_MKNOD)
-  check_library_exists(
-    cephfs
-    ceph_ll_setlk
-    ${CEPH_PREFIX}
-    CEPH_FS_SETLK
-    )
-  if(NOT CEPH_FS_SETLK)
-      message(WARNING "Cannot find ceph_ll_setlk.  Disabling CEPH fsal mknod method")
-      set(USE_FSAL_CEPH_SETLK OFF)
-  else(CEPH_FS_SETLK)
-      set(USE_FSAL_CEPH_SETLK ON)
-  endif(NOT CEPH_FS_SETLK)
+  endif(NOT CEPHFS_FOUND)
 endif(USE_FSAL_CEPH)
 
 if(USE_FSAL_RGW)
