--- a/src/FSAL/FSAL_RGW/CMakeLists.txt
+++ b/src/FSAL/FSAL_RGW/CMakeLists.txt
@@ -2,17 +2,6 @@ add_definitions(
   -D_FILE_OFFSET_BITS=64
 )
 
-########### next target ###############
-
-# Build source locations and parameters
-IF(RGW_PREFIX)
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I${RGW_PREFIX}/")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -L${RGW_PREFIX}/lib")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -L${RGW_PREFIX}/lib64")
-ELSE()
-  message(WARNING "no rgw prefix")
-ENDIF()
-
 SET(fsalrgw_LIB_SRCS
    main.c
    export.c
@@ -21,9 +10,12 @@ SET(fsalrgw_LIB_SRCS
    internal.h
 )
 
+message("RGW_INCLUDE_DIR ${RGW_INCLUDE_DIR}")
+include_directories(${RGW_INCLUDE_DIR})
+
 add_library(fsalrgw SHARED ${fsalrgw_LIB_SRCS})
 
-target_link_libraries(fsalrgw rgw ${SYSTEM_LIBRARIES})
+target_link_libraries(fsalrgw ${RGW_LIBRARIES} ${SYSTEM_LIBRARIES})
 
 set_target_properties(fsalrgw PROPERTIES VERSION 4.2.0 SOVERSION 4)
 install(TARGETS fsalrgw COMPONENT fsal DESTINATION ${FSAL_DESTINATION} )
