FSAL_GLUSTER: Use glfs_xreaddirplus_r for readdir
LOOKUPs are very expensive operations in Gluster. So to reduce
the overhead in case of READDIR operations, use xreaddirplus
instead. This new API returns handles as well while reading
dirents which should avoid follow-up LOOKUP operations
from Ganesha.

Change-Id: I560197f65f4191b13173ff689fee244be44b99c9
Signed-off-by: Soumya Koduri <skoduri@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -547,6 +547,7 @@ if(USE_FSAL_GLUSTER)
   else(NOT GFAPI_FOUND)
     message(STATUS "GFAPI_INCLUDE_DIRS=${GFAPI_INCLUDE_DIRS}")
     message(STATUS "GFAPI_LIBRARY_DIRS=${GFAPI_LIBRARY_DIRS}")
+    message(STATUS "GFAPI_LIBDIR=${GFAPI_LIBDIR}")
     include_directories(${GFAPI_INCLUDE_DIRS})
     # missing directory not provided by current version of GlusterFS
     include_directories(${GFAPI_PREFIX}/include)
@@ -571,6 +572,13 @@ if(USE_FSAL_GLUSTER)
 	set(USE_FSAL_GLUSTER OFF)
 	message(STATUS "Could not find libacl, disabling GLUSTER fsal build")
     endif(HAVE_ACL_H)
+    check_library_exists(gfapi glfs_xreaddirplus_r ${GFAPI_LIBDIR} HAVE_XREADDIRPLUS)
+    if(HAVE_XREADDIRPLUS)
+        set(USE_GLUSTER_XREADDIRPLUS ON)
+    else()
+        set(USE_GLUSTER_XREADDIRPLUS OFF)
+	message(STATUS "Could not find glfs_xreaddirplus, switching to glfs_readdir_r")
+    endif(HAVE_XREADDIRPLUS)
   endif(USE_FSAL_GLUSTER)
 endif(USE_FSAL_GLUSTER)
 
