--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -571,6 +571,14 @@ if(USE_FSAL_GLUSTER)
 	set(USE_FSAL_GLUSTER OFF)
 	message(STATUS "Could not find libacl, disabling GLUSTER fsal build")
     endif(HAVE_ACL_H)
+    check_library_exists(gfapi glfs_xreaddirplus_r ${GFAPI_LIBRARY_DIRS} HAVE_XREADDIRPLUS)
+    if(HAVE_XREADDIRPLUS)
+        set(USE_GLUSTER_XREADDIRPLUS ON)
+	message(STATUS "found glfs_xreaddirplus")
+    else()
+        set(USE_GLUSTER_XREADDIRPLUS OFF)
+	message(STATUS "Could not find glfs_xreaddirplus, switching to glfs_readdir_r")
+    endif(HAVE_XREADDIRPLUS)
   endif(USE_FSAL_GLUSTER)
 endif(USE_FSAL_GLUSTER)
 
