ceph: add backward compatability for new ceph_statx based APIs
Based on the outcome of the test for CEPH_STATX_INO, we will either
use the ceph_statx based APIs provided by libcephfs, or use the one
we define internally.

Change-Id: I527269ba79b997b0a4326ba32464e364ab75b42d
Signed-off-by: Jeff Layton <jlayton@redhat.com>

--- a/src/FSAL/FSAL_CEPH/CMakeLists.txt
+++ b/src/FSAL/FSAL_CEPH/CMakeLists.txt
@@ -10,7 +10,15 @@ SET(fsalceph_LIB_SRCS
    ds.c
    internal.c
    internal.h
+   statx_compat.h
 )
+
+if (NOT CEPH_FS_CEPH_STATX)
+  SET(fsalceph_LIB_SRCS
+	${fsalceph_LIB_SRCS}
+	statx_compat.c
+     )
+endif(NOT CEPH_FS_CEPH_STATX)
 
 include_directories(${CEPHFS_INCLUDE_DIR})
 
