cmake: find libhandle.so on Debian 9 and Ubuntu 16.04, 16.10 — again
tl;dnr: previous fix wasn't quite right, cmake's check_library_exists
macro is byzantine ~ as in complex — and poorly documented. This hack
seems to work.

The gory details:

In the newest Debian and Ubuntu releases the developers (xfsprogs
and/or Debian) have rather strangely chosen to put the libhandle.so.*
shared libs in /lib instead of the more common /usr/lib or
/usr/lib/x86_64-linux-gnu directories. In the same vein the xfslibs-dev
package also installs the libhandle.so symlink in /lib.

Unfortunately though, cmake's check_library_exists macro doesn't check
/lib, or it checks /usr/lib first, where it finds libhandle.a. Since
the code in libhandle.sa isn't compiled with -PIC, it won't link with
another shared lib. (On other architectures, e.g. ARM, it will work
because all code is always compiled with -PIC.) Getting into tl;dnr
territory, cmake may think check_library_exists worked, but then later
the build will fail because of the PIC/non-PIC mismatch.

Through trial-and-error we see the following behavior of
check_library_exists:
a) check_library_exists(handle "open_by_handle" "" HAVE_XFS_LIB)
   Link with /usr/lib/libhandle.a, cmake test fails[1], XFS is disabled
   in config, packaging fails for missing libfsalxfs.so.
b) check_library_exists(handle "open_by_handle" "lib" HAVE_XFS_LIB)
   Link with
      -L/home/kkeithle/src/nfs-ganesha-2.4.1/src/CMakeFiles/CMakeTmp/lib
   but actually links with /usr/lib/libhandle.a, cmake test fails, etc.
c) check_library_exists(handle "open_by_handle" "/lib" HAVE_XFS_LIB)
   Linked as with a) above. cmake test fails, etc.
d) check_library_exists(handle "open_by_handle" "/bunny/foo/foo"
   HAVE_XFS_LIB)
   (seems a silly test, yes, but instructive). Links with
      ...-L/bunny/foo/foo -lhandle -Wl,-rpath,/bunny/foo/foo...
e) check_library_exists(handle "open_by_handle" "/./lib" HAVE_XFS_LIB)
   Links with ...-L/./lib -rdynamic -lhandle -Wl,-rpath,/./lib.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -577,7 +577,7 @@ endif(USE_FSAL_RGW)
 
 if(USE_FSAL_XFS)
   if(EXISTS /lib/libhandle.so)
-    check_library_exists(handle "open_by_handle" "lib" HAVE_XFS_LIB)
+    check_library_exists(handle "open_by_handle" "/./lib" HAVE_XFS_LIB)
     if(HAVE_XFS_LIB)
       set(PATH_LIBHANDLE "/lib/libhandle.so" CACHE INTERNAL "debian stretch and ubuntu xenial hack")
     endif(HAVE_XFS_LIB)
