build: don't use __DATE__ and __TIME__ for Release builds
Current Debian-based distributions such as Debian Stretch,
Ubuntu Xenial, and Ubuntu Yakkety, and soon Fedora, build
with -Werror and -Wdate-time. Such builds fail unless the
places where __DATE__ and __TIME__ are patched out, which
is a nuisance to have to do when building community packages
for download.

Also the #define VERSION line in config.h was not being
substituted correctly.

Change-Id: I8762ebcd921413fe4cb6852946baa4f3a95a3f4d
Signed-off-by: Kaleb S. KEITHLEY <kkeithle@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,12 @@ project(nfs-ganesha C CXX)
 set(GANESHA_MAJOR_VERSION 2)
 set(GANESHA_MINOR_VERSION 4)
 
+IF(CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+set(GANESHA_BUILD_RELEASE 1)
+ELSE()
+set(GANESHA_BUILD_RELEASE 0)
+ENDIF(CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+
 # needs to come after project()
 IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT OR CMAKE_INSTALL_PREFIX STREQUAL "/usr")
 	SET(CMAKE_INSTALL_PREFIX "/usr" CACHE PATH "Install prefix for common files" FORCE)
