--- a/src/FSAL/FSAL_RGW/CMakeLists.txt
+++ b/src/FSAL/FSAL_RGW/CMakeLists.txt
@@ -13,7 +13,7 @@ SET(fsalrgw_LIB_SRCS
 message("RGW_INCLUDE_DIR ${RGW_INCLUDE_DIR}")
 include_directories(${RGW_INCLUDE_DIR})
 
-add_library(fsalrgw SHARED ${fsalrgw_LIB_SRCS})
+add_library(fsalrgw MODULE ${fsalrgw_LIB_SRCS})
 
 target_link_libraries(fsalrgw ${RGW_LIBRARIES} ${SYSTEM_LIBRARIES})
 
