--- a/src/FSAL/FSAL_ZFS/CMakeLists.txt
+++ b/src/FSAL/FSAL_ZFS/CMakeLists.txt
@@ -15,7 +15,7 @@ SET(fsalzfs_LIB_SRCS
    xattrs.c
 )
 
-add_library(fsalzfs SHARED ${fsalzfs_LIB_SRCS})
+add_library(fsalzfs MODULE ${fsalzfs_LIB_SRCS})
 
 target_link_libraries(fsalzfs
   zfswrap
