--- a/src/FSAL/Stackable_FSALs/FSAL_NULL/CMakeLists.txt
+++ b/src/FSAL/Stackable_FSALs/FSAL_NULL/CMakeLists.txt
@@ -16,7 +16,7 @@ SET(fsalnull_LIB_SRCS
    export.c
 )
 
-add_library(fsalnull SHARED ${fsalnull_LIB_SRCS})
+add_library(fsalnull MODULE ${fsalnull_LIB_SRCS})
 
 target_link_libraries(fsalnull
   gos
