Fix NTIRPC version in spec file
In the case where an embedden ntirpc is being installed, the spec file
needs to know the exact version of ntirpc to install.  However, the
CMakeLists.txt only has the minimum version.  Rather than changing that
every time ntirpc bumps, use a PARENT_SCOPE variable from ntirpc itself
to indicate the actual version, and leave the minimum version specified
in Ganesha's build system.

Change-Id: I981b26f4a4c401452a8dc4a3c543337a652bf621
Signed-off-by: Daniel Gryniewicz <dang@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -861,9 +861,9 @@ if(USE_9P_RDMA)
   link_directories (${MOOSHIKA_LIBRARY_DIRS})
 endif(USE_9P_RDMA)
 
-set(NTIRPC_VERSION 1.4.0)
+set(NTIRPC_MIN_VERSION 1.4.0)
 if (USE_SYSTEM_NTIRPC)
-  find_package(NTIRPC ${NTIRPC_VERSION} REQUIRED)
+  find_package(NTIRPC ${NTIRPC_MIN_VERSION} REQUIRED)
 else (USE_SYSTEM_NTIRPC)
   # Set options for submodule
   option(USE_RPC_RDMA "Use RDMA" ${USE_NFS_RDMA})
