ceph: clean up the documentation
Flesh out the configuration docs and sample config file.

Change-Id: Ia6e0e78a08b66761399434145fcb873cb7427d5c
Signed-off-by: Jeff Layton <jlayton@redhat.com>

--- a/src/config_samples/ceph.conf
+++ b/src/config_samples/ceph.conf
@@ -13,6 +13,24 @@ EXPORT
 	Transport_Protocols = TCP;
 
 	FSAL {
+		# FSAL NAME -- this must be "CEPH"
 		Name = CEPH;
+
+		# cephx username -- will be appended to "client."
+		User_Id = "testuser";
+
+		# cephx secret key in base64 format
+		Secret_Access_Key = "<substitute yours>";
 	}
+}
+
+CEPH {
+    # path to the Ceph's ceph.conf file (usually in /etc/ceph/ceph.conf)
+    ceph_conf = "/path/to/ceph.conf";
+
+    # optional mask to be applied to permissions being set
+    umask = 0;
+
+    # the access mode applied to xattrs (somewhat dubious here)
+    xattr_access_rights = 0;
 }
