Add AddressSanitizer to the build
Add CMake modules to allow building with AddressSanitizer.  Supported
modes are SANITIZE_ADDRESS, SANITIZE_MEMORY, SANITIZE_THREAD or
SANITIZE_UNDEFINED (but only one at a time).  To build, use
-DSANITIZE_ADDRESS=ON

Change-Id: I86484e5472a0e915ee95be26ccb290191404440f
Signed-off-by: Daniel Gryniewicz <dang@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -102,6 +102,7 @@ EXECUTE_PROCESS( COMMAND hostname
   )
 
 find_package(Toolchain REQUIRED)
+find_package(Sanitizers)
 
 # Add maintainer mode for (mainly) strict builds
 include(${CMAKE_SOURCE_DIR}/cmake/maintainer_mode.cmake)
