--- a/src/FSAL/FSAL_CEPH/CMakeLists.txt
+++ b/src/FSAL/FSAL_CEPH/CMakeLists.txt
@@ -23,6 +23,7 @@ endif(NOT CEPH_FS_CEPH_STATX)
 include_directories(${CEPHFS_INCLUDE_DIR})
 
 add_library(fsalceph MODULE ${fsalceph_LIB_SRCS})
+add_sanitizers(fsalceph)
 
 target_link_libraries(fsalceph ${CEPHFS_LIBRARIES} ${SYSTEM_LIBRARIES})
 
