--- a/src/FSAL/FSAL_GLUSTER/CMakeLists.txt
+++ b/src/FSAL/FSAL_GLUSTER/CMakeLists.txt
@@ -28,6 +28,7 @@ SET(fsalgluster_LIB_SRCS
 )
 
 add_library(fsalgluster MODULE ${fsalgluster_LIB_SRCS})
+add_sanitizers(fsalgluster)
 
 target_link_libraries(fsalgluster
   ${SYSTEM_LIBRARIES}
