--- a/src/FSAL/FSAL_GPFS/CMakeLists.txt
+++ b/src/FSAL/FSAL_GPFS/CMakeLists.txt
@@ -25,6 +25,7 @@ SET(fsalgpfs_LIB_SRCS
 )
 
 add_library(fsalgpfs MODULE ${fsalgpfs_LIB_SRCS})
+add_sanitizers(fsalgpfs)
 
 target_link_libraries(fsalgpfs ${SYSTEM_LIBRARIES})
 
