--- a/src/FSAL/FSAL_VFS/panfs/CMakeLists.txt
+++ b/src/FSAL/FSAL_VFS/panfs/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(fsalpanfs_LIB_SRCS
   )
 
 add_library(fsalpanfs MODULE ${fsalpanfs_LIB_SRCS})
+add_sanitizers(fsalpanfs)
 
 target_link_libraries(fsalpanfs
   gos
