--- a/src/FSAL/FSAL_VFS/vfs/CMakeLists.txt
+++ b/src/FSAL/FSAL_VFS/vfs/CMakeLists.txt
@@ -20,6 +20,7 @@ if(ENABLE_VFS_DEBUG_ACL)
 endif(ENABLE_VFS_DEBUG_ACL)
 
 add_library(fsalvfs MODULE ${fsalvfs_LIB_SRCS})
+add_sanitizers(fsalvfs)
 
 target_link_libraries(fsalvfs
   gos
