--- a/src/FSAL/FSAL_VFS/xfs/CMakeLists.txt
+++ b/src/FSAL/FSAL_VFS/xfs/CMakeLists.txt
@@ -16,8 +16,10 @@ SET(fsalxfs_LIB_SRCS
   )
 
 add_library(fsalxfs MODULE ${fsalxfs_LIB_SRCS})
+add_sanitizers(fsalxfs)
 if(PATH_LIBHANDLE)
 add_library(handle SHARED IMPORTED)
+add_sanitizers(handle)
 set_target_properties(handle PROPERTIES IMPORTED_LOCATION ${PATH_LIBHANDLE})
 endif(PATH_LIBHANDLE)
 
