--- a/src/FSAL/FSAL_ZFS/CMakeLists.txt
+++ b/src/FSAL/FSAL_ZFS/CMakeLists.txt
@@ -16,6 +16,7 @@ SET(fsalzfs_LIB_SRCS
 )
 
 add_library(fsalzfs MODULE ${fsalzfs_LIB_SRCS})
+add_sanitizers(fsalzfs)
 
 target_link_libraries(fsalzfs
   zfswrap
