--- a/src/FSAL/FSAL_RGW/CMakeLists.txt
+++ b/src/FSAL/FSAL_RGW/CMakeLists.txt
@@ -14,6 +14,7 @@ message("RGW_INCLUDE_DIR ${RGW_INCLUDE_DIR}")
 include_directories(${RGW_INCLUDE_DIR})
 
 add_library(fsalrgw MODULE ${fsalrgw_LIB_SRCS})
+add_sanitizers(fsalrgw)
 
 target_link_libraries(fsalrgw ${RGW_LIBRARIES} ${SYSTEM_LIBRARIES})
 
