Fix build without GSS/KRB5
If the building system does not have GSS installed, the build will
succeed, and GSS should be unused.  Note that disabling GSS on a system
that has it probably doesn't work.

Change-Id: Ie868d11ad59fd255004cfe2956cb9eb8f85780f3
Signed-off-by: Daniel Gryniewicz <dang@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -477,26 +477,28 @@ if( "${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" VERSION_GREATER "2.6" )
   find_package(Threads REQUIRED)
 endif( "${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" VERSION_GREATER "2.6" )
 
-find_package(Krb5 REQUIRED gssapi)
-check_include_files(gssapi.h HAVE_GSSAPI_H)
-if (NOT HAVE_GSSAPI_H)
-  # Debian/Ubuntu 12 magic
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/include/mit-krb5/")
+if (USE_GSS)
+  find_package(Krb5 REQUIRED gssapi)
   check_include_files(gssapi.h HAVE_GSSAPI_H)
-endif(NOT HAVE_GSSAPI_H)
-
-if(KRB5_FOUND AND HAVE_GSSAPI_H)
-  set(HAVE_KRB5 ON)
-  set(KRB5_VERSION 194)  # hand code until we do krb5-config --version magic
-  set(_HAVE_GSSAPI ON)
-else(KRB5_FOUND AND HAVE_GSSAPI_H)
-  if (NOT KRB5_FOUND)
-    message(FATAL_ERROR "Cannot find kerberos libraries")
-  endif(NOT KRB5_FOUND)
   if (NOT HAVE_GSSAPI_H)
-    message(FATAL_ERROR "Cannot find GSS libraries")
-  endif (NOT HAVE_GSSAPI_H)
-endif(KRB5_FOUND AND HAVE_GSSAPI_H)
+    # Debian/Ubuntu 12 magic
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/include/mit-krb5/")
+    check_include_files(gssapi.h HAVE_GSSAPI_H)
+  endif(NOT HAVE_GSSAPI_H)
+
+  if(KRB5_FOUND AND HAVE_GSSAPI_H)
+    set(HAVE_KRB5 ON)
+    set(KRB5_VERSION 194)  # hand code until we do krb5-config --version magic
+    set(_HAVE_GSSAPI ON)
+  else(KRB5_FOUND AND HAVE_GSSAPI_H)
+    if (NOT KRB5_FOUND)
+      message(FATAL_ERROR "Cannot find kerberos libraries")
+    endif(NOT KRB5_FOUND)
+    if (NOT HAVE_GSSAPI_H)
+      message(FATAL_ERROR "Cannot find GSS libraries")
+    endif (NOT HAVE_GSSAPI_H)
+  endif(KRB5_FOUND AND HAVE_GSSAPI_H)
+endif(USE_GSS)
 
 if (USE_ADMIN_TOOLS)
   find_package(PythonInterp)
@@ -711,8 +713,13 @@ include_directories(
   "${PROJECT_BINARY_DIR}/include"
   "${PROJECT_SOURCE_DIR}/include"
   "${OS_INCLUDE_DIR}"
-  "${KRB5_INCLUDE_DIRS}"
 )
+
+if (HAVE_KRB5)
+  include_directories(
+    "${KRB5_INCLUDE_DIRS}"
+    )
+endif (HAVE_KRB5)
 
 # Fixup loose bits of autotools legacy
 set(_USE_9P ${USE_9P})
@@ -866,8 +873,9 @@ if (USE_SYSTEM_NTIRPC)
   find_package(NTIRPC ${NTIRPC_MIN_VERSION} REQUIRED)
 else (USE_SYSTEM_NTIRPC)
   # Set options for submodule
-  option(USE_RPC_RDMA "Use RDMA" ${USE_NFS_RDMA})
-  option(USE_TIRPC_EPOLL "Use EPOLL" ${USE_TIRPC_EPOLL})
+  set(USE_RPC_RDMA ${USE_NFS_RDMA} CACHE BOOL "Use RDMA")
+  set(TIRPC_EPOLL ${TIRPC_EPOLL} CACHE BOOL "Use EPOLL")
+  set(USE_GSS ${USE_GSS} CACHE BOOL "Use GSS")
   add_subdirectory(libntirpc)
   set(NTIRPC_LIBRARY ntirpc)
   set(NTIRPC_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/libntirpc/ntirpc/")
