minor changes to build on openSUSE Leap
For building on OpenSuSE Build Service we need openSUSE-release
so that cmake can get NAME="openSUSE Leap" from /etc/os-release.

(distribution-release may be redundant? It appears to install an
/etc/os-release with NAME="Dummy")

Change-Id: I59415362bd68ffcea7f7057b9d3e7f89c5aff5d7
Signed-off-by: Kaleb S. KEITHLEY <kkeithle@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -78,6 +78,10 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
      message( STATUS "Detected a Linux SLES machine" )
      set(DISTRO "SLES")
      set(LIBEXECDIR "/usr/lib")
+  elseif( ${SYS_RELEASE} MATCHES "openSUSE Leap" )
+     message( STATUS "Detected a Linux openSUSE machine" )
+     set(DISTRO "SLES")
+     set(LIBEXECDIR "/usr/lib")
   else( ${SYS_RELEASE} MATCHES "Red Hat" )
      message( STATUS "Detected an UNKNOWN Linux machine" )
      set(DISTRO "UNKNOWN")
