--- a/src/scripts/checkpatch.conf
+++ b/src/scripts/checkpatch.conf
@@ -79,13 +79,16 @@
 # We will no longer get grumpy about single line braces
 --ignore BRACES
 
+# We allow upper case constants on the left side of comparisons
+# and it is a frivolous test anyway as we allow CamelCase.
+--ignore CONSTANT_COMPARISON
+
 # @todo FSF work on removing these ones if they make sense...
 --ignore BLOCK_COMMENT_STYLE
 #--ignore GLOBAL_INITIALISERS
 #--ignore UNSPECIFIED_INT
 #--ignore LONG_LINE
 #--ignore SUSPECT_CODE_INDENT
-#--ignore CONSTANT_COMPARISON
 #--ignore LINE_SPACING
 #--ignore TYPECAST_INT_CONSTANT
 
