Implement BIND_CONN_TO_SESSION
Change-Id: Ia5d55a6df544800d524acb5fa8c729ca232204d6
Signed-off-by: Frank S. Filz <ffilzlnx@mindspring.com>

--- a/src/Protocols/NFS/CMakeLists.txt
+++ b/src/Protocols/NFS/CMakeLists.txt
@@ -11,6 +11,7 @@ SET(nfsproto_STAT_SRCS
    nfs_null.c
    nfs4_Compound.c
    nfs4_op_access.c
+   nfs4_op_bind_conn.c
    nfs4_op_close.c
    nfs4_op_commit.c
    nfs4_op_create.c
